# szl-router

./: .dockerignore  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  config.example.yaml  pyproject.toml  requirements.txt  test_cooldown_cost_observer.py  test_embed_cache_pool.py  test_grid_context.py  test_mesh_coordinator.py  test_publish_workflow_permissions.py  test_receipt_emit.py  test_retry_backoff.py  test_router.py  test_signed_receipt.py  test_szl_auto.py
.github/workflows/: ci.yml  codeql.yml  dco.yml  hf-space-deploy.yml  hf-space-drift-check.yml  publish.yml  sbom.yml
docs/: DUAL_GPU_MESH.md  MESH_COORDINATOR.md
examples/: forge-mesh-router.py
scripts/: hf_space_deploy.py  hf_space_drift_check.py
space/: Dockerfile  README.md  index.html  server.py  szl_source_attestation.py
space/assets/: app.js  snapshot-router-health.json  snapshot-router-models.json  snapshot-router-provenance.json  style.css  szl_verify_widget.js
space/tests/: test_canonical_domain.py  test_router_surface.py  test_source_attestation.py
szl_router/: __init__.py  app.py  core.py  grid.py  mesh_coordinator.py  receipts.py  spend_guard.py  verify.py
